--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.6.2",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "leaflet": "1.4.0",
+    "vue2-leaflet": "2.1.1"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
