--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "es6-promise": "^4.2.8",
+    "leaflet": "1.4.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
+    "vue-csv-import": "^2.3.7",
     "vue-router": "^3.2.0",
+    "vue2-leaflet": "2.1.1",
     "vuetify": "^2.6.2",
-    "vuex": "^3.6.2",
-    "leaflet": "1.4.0",
-    "vue2-leaflet": "2.1.1"
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@nuxtjs/vuetify": "^1.12.3",
